--- a/index.html
+++ b/index.html
@@ -1,14 +1,133 @@
-<html ng-app="app" lang="en" >
+<html ng-app="app" lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Angular Material style sheet -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="dist/cssmodules.css">
+    <link rel="stylesheet" href="styles/expanded-card.css"/>
     <script src="dist/jsmodules.js"></script>
     <script src="dist/app.js"></script>
     <title ng-bind="$state.current.name + ' - Boilerplate'"> - Boilerplate</title>
 </head>
-<body  ng-cloak>
-<div ui-view></div>
+<body ng-cloak>
+<div ng-controller="navCtrl" layout="row" ng-cloak>
+
+    <section layout="row" flex>
+        <md-sidenav class="md-sidenav-left md-whiteframe-4dp" md-component-id="sidenavLeft">
+
+            <md-toolbar class="md-theme-light">
+                <h1 class="md-toolbar-tools">Angularplate</h1>
+            </md-toolbar>
+            <md-content ng-controller="RightCtrl">
+                <md-list flex class="padding:0">
+                    <md-list-item class="md-2-line" ng-click="$state.go('home.index')">
+                        <a class="md-list-item-text" layout="column">
+                            <h4>Home</h4>
+                        </a>
+                    </md-list-item>
+                    <md-list-item class="md-2-line" ng-click="$state.go('dashboard.index')">
+                        <a class="md-list-item-text" layout="column">
+                            <h4>Dashboard</h4>
+                        </a>
+                    </md-list-item>
+                    <md-divider></md-divider>
+                    <md-subheader class="md-no-sticky">User</md-subheader>
+                    <md-list-item class="md-2-line" ng-click="$state.go('user.list')">
+                        <div class="md-list-item-text" layout="column">
+                            <h4>List</h4>
+                        </div>
+                    </md-list-item>
+                </md-list>
+            </md-content>
+
+        </md-sidenav>
+        <div flex>
+            <md-toolbar class="md-hue-2">
+                <div class="md-toolbar-tools">
+                    <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleRight()">
+                        <i class="material-icons">menu</i>
+                    </md-button>
+                    <h2>
+                        <span>{{state}}</span>
+                    </h2>
+                    <span flex></span>
+                    <md-button class="md-icon-button" aria-label="Favorite">
+                        <i class="material-icons" style="color: deeppink;" ng-click="showSimpleToast()">favorite</i>
+                    </md-button>
+                    <md-menu>
+                        <md-button aria-label="Open phone interactions menu" class="md-icon-button"
+                                   ng-click="openMenu($mdOpenMenu, $event)">
+                            <i class="material-icons">call</i>
+                        </md-button>
+                        <md-menu-content width="4">
+                            <md-menu-item>
+                                <md-button>
+                                    <i class="material-icons">dialpad</i>
+                                    Redial
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-button disabled="disabled">
+                                    <i class="material-icons">voicemail</i>
+                                    Check voicemail
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-divider></md-menu-divider>
+                            <md-menu-item>
+                                <md-button>
+                                    <i class="material-icons">notifications off</i>
+                                    Disabled notifications
+                                </md-button>
+                            </md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+                    <md-menu ng-show="isAuthenticated">
+                        <md-button aria-label="Yoza Wiratama" ng-click="openMenu($mdOpenMenu, $event)">
+                            Yoza Wiratama
+                        </md-button>
+                        <md-menu-content width="4">
+                            <md-menu-item>
+                                <md-button>
+                                    <i class="material-icons">face</i>
+                                    Profile
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-button disabled="disabled">
+                                    <i class="material-icons">settings</i>
+                                    Settings
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-divider></md-menu-divider>
+                            <md-menu-item>
+                                <md-button ng-click="logout()">
+                                    Logout
+                                </md-button>
+                            </md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+                    <md-button ng-show="!isAuthenticated" ng-click="showLoginDialog($event)" class="md-raised" aria-label="Login">
+                        Login
+                    </md-button>
+
+                    <md-button class="md-icon-button" aria-label="More">
+                        <i class="material-icons" style="color: rgb(255, 255, 255);">more_vert</i>
+                    </md-button>
+                </div>
+            </md-toolbar>
+        </div>
+
+
+    </section>
+
+</div>
+<div layout="row" flex layout-align="center" layout-fill>
+    <div ui-view flex="90" class="content"></div>
+    <md-button class="md-primary md-fab md-fab-bottom-right">
+        <i class="material-icons" style="color: rgb(255, 255, 255);">add</i>
+    </md-button>
+</div>
 
 
 </body>
