fab speed dial position and expanded list

--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
 
         </section>
     </div>
-    <md-content layout="column" flex >
-        <div ui-view flex layout="row" layout-align="center" layout-padding="" class="content"></div>
-    </md-content>
+    <div ui-view flex layout-fill></div>
+
 </div>
 </body>
 </html>
