add theme example

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             </md-menu-content>
                         </md-menu>
 
-                        <md-button ng-show="!isAuthenticated" ng-click="showLoginDialog($event)" class="md-raised"
+                        <md-button ng-show="!isAuthenticated" ng-click="showLoginDialog($event)" class="md-raised md-accent"
                                    aria-label="Login">
                             Login
                         </md-button>
